# boscli

./: .gitignore  .landscape.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
boscli/: __init__.py  basic_types.py  cli.py  command.py  command_definition.py  completer.py  exceptions.py  filters.py  interpreter.py  parser.py
boscli/readlinecli/: readlinecli.py
examples/: ifaces_config.py  readline_demo_cli.py
integration_tests/: test_basic_command_execution.py
spec/: autocomplete_spec.py  basic_types_spec.py  command_spec.py  context_spec.py  filters_spec.py  help_spec.py  interpreter_filters_spec.py  interpreter_spec.py
specs/: autocomplete_spec.py  help_spec.py  interpreter_spec.py
tests/: autocomplete_spec.py  test_autocomplete.py  test_command.py  test_completer.py  test_interpreter.py  test_interpreter_completer.py  test_interpreter_context.py  test_interpreter_exit.py  test_interpreter_help.py  test_options_type.py  test_parser.py
tests/isolation_tests/: test_command.py  test_interpreter.py  test_options_type.py  test_parser.py
tests/unit_tests/: test_autocomplete.py  test_interpreter.py  test_interpreter_context.py  test_interpreter_help.py
